# Variational

./: .gitignore  LICENSE  README.md  index.html  makefile  variational.tex
src/variational/: variational.c
tools/transaction_sender/: Cargo.toml
tools/transaction_sender/src/: main.rs
